--- a/wp-content/themes/pneumatic-theme/scss/breakpoints/_tablet.scss
+++ b/wp-content/themes/pneumatic-theme/scss/breakpoints/_tablet.scss
@@ -1,8 +1,9 @@
-.w {
+
+.content-wrapper,
+.article--inner {
   padding-left: 1em;
   padding-right: 1em;
 }
-
 
 
 /**
@@ -15,9 +16,4 @@
 }
 .widget_calendar {
   width: 50%;
-}
-.widget-area--inner {
-  padding-left: 0;
-  padding-right: 0;
-  // overflow: hidden;
 }
